Avance no tan avance del portafolio

--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>Yelitza Cho</title>
+		<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i|Montserrat:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i" rel="stylesheet">
 		<link rel="icon" type="image/png" sizes="16x16" href="img/logo.png">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css">
 		<link rel="stylesheet" href="css/icons/style.css">
 		<link rel="stylesheet" href="css/foundation.min.css">
 		<link rel="stylesheet" href="css/app.css">
+		<title>Yelitza Choque</title>
 	</head>
 	<body>
-		<header>
+		<section class="slide">
+			<div>
+				<h1>YELITZA CHOQUE</h1>
+				<h4>UX DESIGNER - GRAPHIC DESIGNER</h4>
+			</div>
+		</section>
+		<div class="block"></div>
+		<!-- <header>
 			<input id="test" type="checkbox" />
 			<label for="test">
 		    <svg class="burger" width="86" height="60" viewbox="0 0 150 150">
@@ -37,9 +45,33 @@
 			</div>
 
 			<span class="main">
-		    <span>Pure CSS Menu</span>
+		    <span>Yelitza Cho</span>
 			</span>
 		</header>
+		<section>
+			<div>
+				<h1>YELITZA CHOQUE</h1>
+				<h4>UX DESIGNER - GRAPHIC DESIGNER</h4>
+			</div>
+			<div></div>
+
+		</section>
+		<section>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</section>
+		<footer>
+			<div>
+				<div>
+					<a href="#"><i class="icon-pinterest"></i></a>
+					<a href="#"><i class="icon-linkedin2"></i></a>
+					<a href="#"><i class="icon-github"></i></a>
+				</div>
+			</div>
+		</footer> -->
 		<!-- <header>
 			<div class="row">
 				<div class="test">
