--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i|Montserrat:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet"> 
 		<link rel="icon" type="image/png" sizes="16x16" href="img/logo.png">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css">
 		<link rel="stylesheet" href="css/icons/style.css">
@@ -13,83 +13,58 @@
 		<title>Yelitza Choque</title>
 	</head>
 	<body>
-		<section class="slide">
-			<div>
-				<h1>YELITZA CHOQUE</h1>
-				<h4>UX DESIGNER - GRAPHIC DESIGNER</h4>
+		<header>
+			<div id="logo">
+				<a href="#"></a>
 			</div>
-		</section>
-		<div class="block"></div>
-		<!-- <header>
-			<input id="test" type="checkbox" />
-			<label for="test">
-		    <svg class="burger" width="86" height="60" viewbox="0 0 150 150">
-	        <g stroke-width="12">   
-            <line x1="6" y1="6" x2="80" y2="6"></line>
-            <line x1="6" y1="28" x2="80" y2="28"></line>
-            <line x1="6" y1="50" x2="80" y2="50"> </line>
-	        </g>
-		    </svg>
-		    <svg class="close" width="86" height="60" viewbox="0 0 150 150">
-	        <g stroke-width="12">   
-            <line x1="42" y1="6" x2="42" y2="80"></line>
-            <line x1="6" y1="42" x2="80" y2="42"></line>
-	        </g>
-		    </svg>
-			</label>
-			<div class="menu">
-		    <div>Home</div>
-		    <div>About</div>
-		    <div>Work</div>
-		    <div>Contact</div>
-			</div>
-
-			<span class="main">
-		    <span>Yelitza Cho</span>
-			</span>
-		</header>
-		<section>
-			<div>
-				<h1>YELITZA CHOQUE</h1>
-				<h4>UX DESIGNER - GRAPHIC DESIGNER</h4>
-			</div>
-			<div></div>
-
-		</section>
-		<section>
-			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
-		</section>
-		<footer>
-			<div>
+			<nav id="mobile-menu">
 				<div>
-					<a href="#"><i class="icon-pinterest"></i></a>
-					<a href="#"><i class="icon-linkedin2"></i></a>
-					<a href="#"><i class="icon-github"></i></a>
+					<span><i class="icon-cross"></i></span>
 				</div>
-			</div>
-		</footer> -->
-		<!-- <header>
-			<div class="row">
-				<div class="test">
-					<i class="icon-menu burger"></i>
-					<i class="icon-cross close"></i>
-				</div>
-				<div class="menu">
+				<div class="menu-container">
 					<ul>
-						<li>Home</li>
-						<li>About</li>
-						<li>Works</li>
-						<li>Contact</li>
+						<li>
+							<a href="#">About</a>
+						</li>
+						<li>
+							<a href="#">Portfolio</a>
+						</li>
+						<li>
+							<a href="#">Contact</a>
+						</li>
 					</ul>
+					<div class="redes-sociales">
+						<a href="https://twitter.com/YelitzaCho" target="_blank"><i class="icon-twitter"></i></a>
+						<a href="https://www.behance.net/yelitzacho" target="_blank"><i class="icon-instagram"></i></a>
+						<a href="https://dribbble.com/YelitzaCho" target="_blank"><i class="icon-dribbble"></i></a>
+						<a href="https://github.com/yelitzacho" target="_blank"><i class="icon-github"></i></a>
+					</div>
+				</div>
+			</nav>
+			<div id="deskot-menu"></div>
+			<nav class="menu">
+				<a href="#">ABOUT</a>
+				<a href="#">WORK</a>
+				<a href="#">CONTACT</a>
+			</nav>
+		</header>
+		<section class="home flex">
+			<div class="content-title flex">
+				<div>
+					<span><i class="icon-menu"></i></span>
+				</div>
+				<div class="">
+					<h1>Yelitza Choque</h1>
+					<h6>UX & GRAPHIC DESIGNER</h6>
 				</div>
 			</div>
-		</header>
-		<section id="prefooter">
-		</section> -->
+		</section>
+		<section class="about flex">
+			<div>
+				<h1>About me</h1>
+				<h6>UX Designer y diseñadora publicitaria. Con experiencia en metodologías agile y Learn UX. Apasionada del arte, los libros y la música. Siempre trato de enfocarme en aprender nuevas tecnologías, herramientas y estrategias que perfeccionen mis habilidades.</h6>
+			</div>
+		</section>
 		<script type="text/javascript" src="js/vendor/jquery.js"></script>
 		<script type="text/javascript" src="js/vendor/foundation.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
